--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,5 @@ scripts/training/bidding/stats*.txt
 scripts/training/data/5 mill deals with bidding.zip
 scripts/training/data/5 mill deals with bidding.ben
 fly.io
+scripts/training/bidding/auctions.txt
+scripts/training/data/2023.12.29-input.bba
