--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,5 @@ scripts/training/bidding/auctions.txt
 scripts/training/data/2023.12.29-input.bba
 scripts/training/data/Camrose24_1.pbn
 UCBC 2024/2024 Practice
+scripts/training/data/BEN-WBridge5.ben
+scripts/training/data/WBridge5-BEN.ben
