--- a/UCBC 2024/Conf/UCBC2024src.conf
+++ b/UCBC 2024/Conf/UCBC2024src.conf
@@ -1,6 +1,10 @@
 [models]
 include_system = True
+# If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
+# Use SAYC in BBA
+bba_ns = 1
+bba_ew = 1
 NS = 1
 EW = 99
 # North and South will make the same request when asking the bidding neural network
@@ -21,9 +25,10 @@ eval_after_bid_count = 12
 use_biddingquality = True
 
 [lead]
+# Neural network for suggesting opening lead
 lead_suit = UCBC 2024/Models/lead_suit-154000
 lead_nt = UCBC 2024/Models/lead_nt-59000
-# Ignore cards as opening lead below this value from neural
+# Ignore cards as opening lead below this value from the neural network
 lead_threshold = 0.20
 # Lead this card suggested by neural network if prediction is over this value
 lead_accept_nn = 0.999
@@ -40,7 +45,7 @@ no_lead_single_dummy = UCBC 2024/Models/single_dummy-32768000
 # Include opening lead, when making single dummy estimates
 lead_included = False
 # Use double dummy when estimating tricks during bidding - to slow if 200 samples
-double_dummy_eval = False
+double_dummy_eval = True
 
 [cardplay]
 # This is telling if opening lead is included in the neural net for lefty
@@ -76,6 +81,7 @@ lead_accept_threshold = 0.01
 # This is calculate using euclidian distance, so 0.33 could be one of the 3 bids in a bidding round matching
 use_distance = True
 bidding_threshold_sampling = 0.70
+
 # Filter to remove hands, where the play is inconsistent with the sample
 play_accept_threshold = 0.03
 # Filter to remove hands not consistent with the bidding. Used during play
@@ -91,8 +97,8 @@ min_sample_hands_auction = 10
 # If we dont find enough samples, then include down to this threshold. Used during bidding
 bid_extend_bid_threshold = 0.01
 # How many boards should we sample to find the number of samples below
-sample_boards_for_auction_opening_lead = 100000
+sample_boards_for_auction_opening_lead = 50000
 # Number of samples made, when finding the opening lead
-sample_hands_opening_lead = 200
+sample_hands_opening_lead = 100
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
