--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -1,6 +1,10 @@
 [models]
 include_system = True
+# If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
+# Use SAYC in BBA
+bba_ns = 1
+bba_ew = 1
 NS = 1
 EW = 99
 # North and South will make the same request when asking the bidding neural network
@@ -64,7 +68,7 @@ sample_boards_for_play = 5000
 claim = True
 # Use bidding info during play
 use_biddinginfo = True
-# Use bidding quality in evaluation
+# Use bidding quality in evaluation, if bad samples, just use neural network
 use_biddingquality_in_eval = True
 
 [sampling]
@@ -72,8 +76,12 @@ use_biddingquality_in_eval = True
 # Can be disabled by setting it to zero
 lead_accept_threshold = 0.01
 # Filter to remove hands, where we do not trust the bidding. Used when sampling hands during bidding
-use_distance = False
-bidding_threshold_sampling = 0.25
+#use_distance = False
+#bidding_threshold_sampling = 0.25
+# This is calculate using euclidian distance, so 0.33 could be one of the 3 bids in a bidding round matching
+use_distance = True
+bidding_threshold_sampling = 0.70
+
 # Filter to remove hands, where the play is inconsistent with the sample
 play_accept_threshold = 0.03
 # Filter to remove hands not consistent with the bidding. Used during play
@@ -91,6 +99,6 @@ bid_extend_bid_threshold = 0.01
 # How many boards should we sample to find the number of samples below
 sample_boards_for_auction_opening_lead = 50000
 # Number of samples made, when finding the opening lead
-sample_hands_opening_lead = 200
+sample_hands_opening_lead = 100
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
