--- a/UCBC 2024/Conf/UCBC2024srcV2.conf
+++ b/UCBC 2024/Conf/UCBC2024srcV2.conf
@@ -53,15 +53,15 @@ double_dummy_eval = True
 
 [cardplay]
 # This is telling if opening lead is included in the neural net for lefty
-opening_lead_included = False
-lefty_nt = UCBC 2024/Models/jack/lefty-1000000
-lefty_suit = UCBC 2024/Models/jack/lefty-1000000
-dummy_nt = UCBC 2024/Models/jack/dummy-920000
-dummy_suit = UCBC 2024/Models/jack/dummy-920000
-righty_nt = UCBC 2024/Models/jack/righty-1000000
-righty_suit = UCBC 2024/Models/jack/righty-1000000
-decl_nt = UCBC 2024/Models/jack/decl-1000000
-decl_suit = UCBC 2024/Models/jack/decl-1000000
+opening_lead_included = True
+lefty_nt = UCBC 2024/Models/lefty_nt-475000
+dummy_nt = UCBC 2024/Models/dummy_nt-475000
+righty_nt = UCBC 2024/Models/righty_nt-475000
+decl_nt = UCBC 2024/Models/decl_nt-950000
+lefty_suit = UCBC 2024/Models/lefty_suit-999000
+dummy_suit = UCBC 2024/Models/dummy_suit-999000
+righty_suit = UCBC 2024/Models/righty_suit-999000
+decl_suit = UCBC 2024/Models/decl_suit-1278000
 # Number of samples when playing the hand
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling
