--- a/src/config/default_api.conf
+++ b/src/config/default_api.conf
@@ -1,5 +1,6 @@
 [models]
 name = GIB 2/1
+api = true
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 0
@@ -15,8 +16,8 @@ bba_ns = 1
 bba_ew = 1
 
 [bidding]
-bidder = models/archive/gib21/bidding-1010000
-info = models/archive/gib21_info/binfo-610000
+bidder = models/archive/gib21/bidding-2250000
+info = models/archive/gib21_info/binfo-2160000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
