--- a/UCBC 2024/MvsM/GIB.conf
+++ b/UCBC 2024/MvsM/GIB.conf
@@ -1,6 +1,7 @@
 [models]
 # BEN NS
 name = GIB 2/1
+api = True
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 2
@@ -88,13 +89,13 @@ double_dummy_eval = True
 # This is telling if opening lead is included in the neural net for lefty
 opening_lead_included = False
 lefty_nt = UCBC 2024/Models/jack/lefty-1000000
-dummy_nt = UCBC 2024/Models/decl_nt-9500000
+dummy_nt = UCBC 2024/Models/decl_nt-950000
 righty_nt = UCBC 2024/Models/jack/righty-1000000
-decl_nt = UCBC 2024/Models/decl_nt-9500000
+decl_nt = UCBC 2024/Models/decl_nt-950000
 lefty_suit = UCBC 2024/Models/jack/lefty-1000000
-dummy_suit = UCBC 2024/Models/decl_suit-12780000
+dummy_suit = UCBC 2024/Models/decl_suit-1278000
 righty_suit = UCBC 2024/Models/jack/righty-1000000
-decl_suit = UCBC 2024/Models/decl_suit-12780000
+decl_suit = UCBC 2024/Models/decl_suit-1278000
 # Number of samples when playing the hand
 sample_hands_play = 200
 # Minimum number of boards we want returned for sampling
