--- a/UCBC 2024/MvsM/GIB.conf
+++ b/UCBC 2024/MvsM/GIB.conf
@@ -22,8 +22,8 @@ matchpoint = False
 contract = models/contract/contract-193200
 
 [bidding]
-bidder = UCBC 2024/Models/bidding_V2-2260000
-info = UCBC 2024/Models/binfo_V2-3100000
+bidder = scripts/training/bidding/model/bidding_V2-2490000
+info = UCBC 2024/Models/binfo_V2-930000
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = 0.07
 # If there is bid above this threshold, make that bid ignoring other bids
