--- a/src/config/default_tf2.conf
+++ b/src/config/default_tf2.conf
@@ -25,7 +25,7 @@ bidder = models/TF2models/GIB_2024-07-17-E25.keras
 opponent = models/TF2models/GIB_2024-07-17-E25.keras
 info = models/TF2models/GIB-Info_2024-07-15-E25.keras
 # If there are multiple bids over this threshold make a simulation for the bids
-search_threshold = 0.07
+search_threshold = 0.001
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 1
 # Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
@@ -94,7 +94,9 @@ lead_from_pips_nt = 24
 lead_from_pips_suit = 135
 
 [eval]
+# Model for finding single dummy estimates provided an opening lead<
 lead_single_dummy = models/TF2models/SD_2024-07-08-E20.keras
+# Model for finding single dummy estimates without opening lead
 no_lead_single_dummy = models/TF2models/RPDD_2024-07-08-E02.keras
 # Include opening lead, when making single dummy estimates
 lead_included = False
